Stop certain elements from being stacked on mobile.
- Update gridism to use a new class to stop stacking.

--- a/client/stylesheets/gridism.css
+++ b/client/stylesheets/gridism.css
@@ -91,6 +91,11 @@
 
 /* Responsive Stuff */
 @media screen and (max-width: 568px) {
+
+  .grid .unit .do-not-stack {
+    width: auto !important;
+  }
+
   /* Stack anything that isn’t full-width on smaller screens */
   .grid .unit {
     width: 100% !important;
